translate part of templates to english

--- a/templates/adddzial.html
+++ b/templates/adddzial.html
@@ -7,7 +7,7 @@
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet">
   </head>
-    <title>Dodaj post</title>
+    <title>Add post</title>
   </head>
   <body>
     <style>
