--- a/templates/artykul.html
+++ b/templates/artykul.html
@@ -28,7 +28,7 @@
           </div>
           <div class="col-12">
           <div class="card" style="color:white ; margin-top: 1%; background-color: #555;">
-            <div class="card-header" style="color:white ;"><h3>Odpowiedzi:</h3></div>
+            <div class="card-header" style="color:white ;"><h3>Answers:</h3></div>
             <div class="card-body">
               {% if zalogowany %}
                 <p>
@@ -46,7 +46,7 @@
             </form>
               </div>
               {% else %}
-              <p>Aby komentować zaloguj się</p>
+              <p>Log in to comment</p>
               {% endif %}
             </div>
               {% for i in range(ilosckomentarzy) %}
@@ -57,7 +57,7 @@
                 <div class="card-body">
                   {{komentarze[i].comment}}
                   {% if postmanagment %}
-                  <a href="{{url_for('removecomment', commentid=komentarze[i].id)}}" style="float: right;"><button class="btn btn-danger">usuń</button></a>
+                  <a href="{{url_for('removecomment', commentid=komentarze[i].id)}}" style="float: right;"><button class="btn btn-danger">remove</button></a>
                   {% endif %}
                 </div>
               </div>
