--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
       <nav class="navbar">
         <ul>
           {% if not login == "Not logged in" %}
-          <a href="url_for('addpost')"><button class="btn btn-primary"> Add post </button></a>
+          <a href="{{url_for('addpost')}}"><button class="btn btn-primary"> Add post </button></a>
           {% if postmanagment %}
           <a href="{{url_for('adddzial')}}"><button class="btn btn-primary">add section</button></button></a>
           {% endif %}
