- fixed login - fixed some db relationships - fixed profilephotos upload - add markdown to posts

--- a/templates/adddzial.html
+++ b/templates/adddzial.html
@@ -1,35 +1,19 @@
-<!doctype html>
-<html>
-  <head>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>        
-  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet">
-  </head>
-    <title>Add post</title>
-  </head>
-  <body>
-    <style>
-      .tresc{
-        width: 100%;
-      }
-    </style>
-    <div class="container">
-          <div class="col-12">
-            <div class="card">
-              <div class="card-header"><h1>działy</h1></div>
-              <div class="card-body">
-              <div class="card">
-            <div class="card-header"><h3> dodaj dział </h3></div>
-            <div class="card-body">
-              <form method="post">
-                <input type="text" name="name" class="w-100" placeholder="Nazwa działu">
-                <br>
-                <textarea class="w-100" name="opis" placeholder="opis działu"></textarea>
-                <button action="submit" class="btn btn-primary">dodaj</button>
-              </form>
-            </div>
-          </div>
-  </body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+<div class="container">
+  <div class="col-12">
+    <div class="card">
+      <div class="card-header"><h1>działy</h1></div>
+      <div class="card-body">
+      <div class="card">
+    <div class="card-header"><h3> dodaj dział </h3></div>
+    <div class="card-body">
+      <form method="post">
+        <input type="text" name="title" class="w-100" placeholder="Section title">
+        <br>
+        <textarea class="w-100" name="description" placeholder="description"></textarea>
+        <button action="submit" class="btn btn-primary">dodaj</button>
+      </form>
+    </div>
+  </div>
+{%endblock%}
