--- a/static/style.css
+++ b/static/style.css
@@ -17,3 +17,11 @@ a{
 .col-sm-offset-1{
 margin-top: 1em;
 }
+.col-md-3{
+	margin-bottom: 1%;
+  }
+  .profilephoto{
+	height: auto;
+	width: 50px;
+	/*position: absolute;*/
+  }
