--- a/templates/base.html
+++ b/templates/base.html
@@ -6,23 +6,45 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>        
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet">
+	{% block scripts %} {% endblock %}
 	<title>forum</title>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	  <a class="navbar-brand" href="/">Forum</a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-	    <div class="navbar-nav">
-	      <a class="nav-item nav-link active" href="#"> <span class="sr-only">(current)</span></a>
-	      <a class="nav-item nav-link" href="#">Features</a>
-	      <a class="nav-item nav-link" href="#">Pricing</a>
-	      <a class="nav-item nav-link disabled" href="#">Disabled</a>
-	    </div>
-	  </div>
-	</nav>
+    <div class="container">
+		<nav class="navbar">
+		  <ul>
+			{% if not login == "Not logged in" %}
+			<a href="{{url_for('addpost')}}"><button class="btn btn-primary"> Add post </button></a>
+			{% if user.postmanagment %}
+			<a href="{{url_for('adddzial')}}"><button class="btn btn-primary">add section</button></button></a>
+			{% endif %}
+			<a href="/logout"><button class="btn btn-primary">Logout</button></a>
+			  {% if user.usersmanagment %}
+			  <a href="/admin/users"><button class="btn btn-primary">Users management</button></a>
+			  {% endif %}
+			{% else %}
+			<a href="/rejestracja"><button class="btn btn-primary"> Register </button></a>
+			<a href="/login"><button class="btn btn-primary">Log in</button></a>
+			{% endif %}
+		  </ul>
+			
+		  </ul>
+		  <a href="{{url_for('zarzadzaniekontem')}}">
+		  <ul class="nav navbar-nav">
+			<div class="row">
+			<div class="col-4">
+			<img class="profilephoto rounded-circle" src="{{url_for('profilowka')}}">
+			</div>
+			  <div class="col-8">
+			  <b>User:</b> {{user.name}}
+			</div>
+			</div>
+		  </ul>
+		</a>
+		</nav>
+		{% block content %}
+		{% endblock %}
+	</div>
 
 </body>
 </html>
